--- a/css/collection.scss
+++ b/css/collection.scss
@@ -202,6 +202,8 @@
 #ul1,#ul2 {
   width: 1160px;
   margin-top: 20px;
+  position:relative;
+  left:-18px;
   &:after {
     content: '';
     display: block;
