--- a/template/ablum_details.html
+++ b/template/ablum_details.html
@@ -44,8 +44,116 @@
                 </div>
             </div>
         </div>
+        <div class="ablum-details-comment-hot">
+            <h2>热门策展</h2>
+            <ul>
+                <li>
+                    <a ui-sref="ablumdetails">
+                        <img src="img/album-list.png" width="161" height="109" alt="">
+                    </a>
+                    <div class="ablum-details-comment-hot-inf">
+                        <h1>宋朝陶瓷文物展是的发生的发生的收到防辐射的</h1>
+                        <h5>同是天涯沦落人</h5>
+                        <div class="ablum-service">
+                            <div class="ablum-service">
+                                <i class="msg"></i><span>11</span>
+                            </div>
+                            <div class="ablum-service">
+                                <i ></i><span>8</span>
+                            </div>
+                        </div>
+                    </div>
 
+                </li>
+                <li>
+                    <a ui-sref="ablumdetails">
+                        <img src="img/album-list.png" width="161" height="109" alt="">
+                    </a>
+                    <div class="ablum-details-comment-hot-inf">
+                        <h1>宋朝陶瓷文物展是的发生的发生的收到防辐射的</h1>
+                        <h5>同是天涯沦落人</h5>
+                        <div class="ablum-service">
+                            <div class="ablum-service">
+                                <i class="msg"></i><span>11</span>
+                            </div>
+                            <div class="ablum-service">
+                                <i ></i><span>8</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </li>
+                <li>
+                    <a ui-sref="ablumdetails">
+                        <img src="img/album-list.png" width="161" height="109" alt="">
+                    </a>
+                    <div class="ablum-details-comment-hot-inf">
+                        <h1>宋朝陶瓷文物展是的发生的发生的收到防辐射的</h1>
+                        <h5>同是天涯沦落人</h5>
+                        <div class="ablum-service">
+                            <div class="ablum-service">
+                                <i class="msg"></i><span>11</span>
+                            </div>
+                            <div class="ablum-service">
+                                <i ></i><span>8</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </li>
+                <li>
+                    <a ui-sref="ablumdetails">
+                        <img src="img/album-list.png" width="161" height="109" alt="">
+                    </a>
+                    <div class="ablum-details-comment-hot-inf">
+                        <h1>宋朝陶瓷文物展是的发生的发生的收到防辐射的</h1>
+                        <h5>同是天涯沦落人</h5>
+                        <div class="ablum-service">
+                            <div class="ablum-service">
+                                <i class="msg"></i><span>11</span>
+                            </div>
+                            <div class="ablum-service">
+                                <i ></i><span>8</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </li>
+                <li>
+                    <a ui-sref="ablumdetails">
+                        <img src="img/album-list.png" width="161" height="109" alt="">
+                    </a>
+                    <div class="ablum-details-comment-hot-inf">
+                        <h1>宋朝陶瓷文物展是的发生的发生的收到防辐射的</h1>
+                        <h5>同是天涯沦落人</h5>
+                        <div class="ablum-service">
+                            <div class="ablum-service">
+                                <i class="msg"></i><span>11</span>
+                            </div>
+                            <div class="ablum-service">
+                                <i ></i><span>8</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </li>
+            </ul>
+        </div>
+        <h2><span>13</span>条评论</h2>
+        <div class="ablum-details-comment-content">
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示">
+            </firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
+            <div class="ablum-details-comment-content-more">
+                <span>点击加载更多</span>
+            </div>
+        </div>
     </div>
-
-
 </div>
