--- a/template/collectionDetails.html
+++ b/template/collectionDetails.html
@@ -39,13 +39,9 @@
                 <td>朝&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;代：</td>
                 <td ng-bind="data.mipOpenCulturalrelicInfo.yearType"></td>
             </tr>
-            <tr>
-                <td>级&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
-                <td ng-bind="data.mipOpenCulturalrelicInfo.collectionLevel"></td>
-            </tr>
             </tbody>
         </table>
-        <p>藏品简介</p>
+        <p style="padding-top:30px;">藏品简介</p>
         <div class="collection-details-infor">
             <div class="content_1" ng-bind="data.mipOpenCulturalrelicInfo.description">
             </div>
