--- a/template/header.html
+++ b/template/header.html
@@ -29,7 +29,7 @@
             <li><a ui-sref="home" ui-sref-active="mainactive">首页</a></li>
             <li><a ui-sref="museum.museumMap" ui-sref-active="mainactive">博物馆</a></li>
             <li><a ui-sref="display({museum:''})" ui-sref-active="mainactive">展览</a></li>
-            <li><a ui-sref="digitization" ui-sref-active="mainactive">数字展厅</a></li>
+            <li><a ui-sref="digitization({museum:'',id:''})" ui-sref-active="mainactive">数字展厅</a></li>
             <li><a ui-sref="collection({museum:'',type:''})" ui-sref-active="mainactive">藏品</a></li>
             <li><a ui-sref="Wiki" ui-sref-active="mainactive">文物百科</a></li>
         </ul>
