--- a/css/album.scss
+++ b/css/album.scss
@@ -213,6 +213,16 @@
       }
 
     }
+    .ablum-details-comment-content-more{
+      width:684px;
+      height:30px;
+      text-align: center;
+      color:$theme-color;
+      background:#f7f7f7;
+      span{
+        line-height:30px;
+      }
+    }
   }
 
 }
@@ -307,5 +317,122 @@ span.emotion.active {
   bottom:45px;
   &.warr{
     color:red;
+  }
+}
+.ablum-details-comment-hot{
+  position:absolute;
+  right:100px;
+  top:669px;
+  width:300px;
+  ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row;
+    flex-flow: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-top:20px;
+    li{
+      margin-bottom:20px;
+      display:flex;
+      .ablum-details-comment-hot-inf{
+        margin-left:10px;
+        h1{
+          font-weight:normal;
+          font-size:16px;
+          color:#333;
+          width: 160px;
+          @include limitLine(1);
+          line-height:40px;
+          margin:0;
+        }
+        h5{
+          font-weight: normal;
+          font-size:14px;
+          color:$theme-color;
+          line-height:30px;
+        }
+        P{
+          font-size:14px;
+          color:#999;
+          line-height:20px;
+          @include limitLine(3);
+        }
+      }
+
+      .ablum-service{
+        display: flex;
+        width:207px;
+        div{
+          cursor: pointer;
+          padding:5px 0;
+        }
+        div i{
+          width:18px;
+          height:17px;
+          background:url('../img/album-service.png') no-repeat;
+        }
+        .msg{
+          background-position:-40px 0;
+        }
+        .port{
+          background-position:-20px 0;
+        }
+        div span{
+          color:#999;
+          padding:0 5px;
+        }
+      }
+    }
+  }
+}
+.ablum-details-comment-first{
+  width:680px;
+  padding-bottom:10px;
+  margin-bottom:15px;
+  .ablum-details-comment-first-top{
+    display:flex;
+    flex-flow: row nowrap;
+    align-content: center;
+    margin-top:15px;
+    span{
+      display: inline-block;
+      background:#f2fbf2;
+      width:640px;
+      u{
+        line-height:40px;
+        padding-left:10px;
+        text-decoration: none;
+        font-size:14px;
+        color:$theme-color
+      }
+      i{
+        padding-left:10px;
+        line-height:40px;
+        font-size:14px;
+        font-style:normal;
+        color:#ced2ce;
+      }
+    }
+  }
+  .ablum-details-comment-first-content{
+    width:610px;
+    margin-left:40px;
+    padding:15px;
+    p{
+      font-size:12px;
+      line-height:22px;
+    }
+    a{
+      display: inline-block;
+      padding-top:10px;
+      font-size:12px;
+      color:$theme-color-active;
+    }
+  }
+  &{
+    border-bottom:1px dashed #8e8e8e;
   }
 }
