--- a/css/display.css
+++ b/css/display.css
@@ -394,6 +394,7 @@ footer {
       .display-content .display-list-content-inner ul li p {
         margin-top: 8px;
         font-size: 12px;
+        height: 77px;
         color: #8e8e8e;
         line-height: 20px;
         display: -webkit-box;
