--- a/css/display.scss
+++ b/css/display.scss
@@ -210,6 +210,7 @@
         p{
           margin-top:8px;
           font-size:12px;
+          height:77px;
           color:#8e8e8e;
           line-height:20px;
           display: -webkit-box;
