--- a/template/digitization.html
+++ b/template/digitization.html
@@ -4,7 +4,7 @@
         <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="digitization">数字展厅</a><u ng-show="conditions.museum">&gt;&gt;</u><span ng-show="conditions.museum" ng-bind="museum"></span>
     </p>
     <div class="digization-tab">
-        <ul>
+        <ul ng-show="showTab">
             <li ng-class="{active:tabpage==1}" ng-click="changeTab(1)">最新</li>
             <li ng-class="{active:tabpage==2}" ng-click="changeTab(2)">最热</li>
         </ul>
@@ -20,7 +20,7 @@
                 <li class="digization-list-item-infor">
                     <div>
                         <h1 ng-bind="item.viName"></h1>
-                        <h2>山东省博物馆</h2>
+                        <h2 ng-if="showTab">山东省博物馆</h2>
                         <p ng-bind="item.viIntro" class="hide" ng-mouseover="showMore($event)" ng-mouseleave="hide($event)"></p>
                     </div>
                 </li>
