策展二级评论

--- a/css/album.css
+++ b/css/album.css
@@ -399,12 +399,14 @@ footer {
         background-position: -22px 0; }
   .ablum-details .ablum-details-wrapper .ablum-details-comment-content-more {
     width: 684px;
-    height: 30px;
+    height: 50px;
     text-align: center;
     color: #008582;
     background: #f7f7f7; }
     .ablum-details .ablum-details-wrapper .ablum-details-comment-content-more span {
-      line-height: 30px; }
+      line-height: 50px; }
+    .ablum-details .ablum-details-wrapper .ablum-details-comment-content-more img {
+      margin-top: 10px; }
 
 .com_form {
   width: 100%;
@@ -584,8 +586,57 @@ span.emotion.active {
       display: inline-block;
       padding-top: 10px;
       font-size: 12px;
+      cursor: pointer;
       color: #ea703a; }
+  .ablum-details-comment-first .ablum-details-comment-others-status {
+    width: 640px;
+    margin-left: 40px;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    left: -120px;
+    top: 0;
+    background-color: #fff; }
+    .ablum-details-comment-first .ablum-details-comment-others-status.show {
+      opacity: 1;
+      height: auto;
+      left: 0px;
+      background-color: #f7f7f7;
+      transition: opacity 0.8s, height 0.8s,left 1s,background 0.8s; }
   .ablum-details-comment-first {
     border-bottom: 1px dashed #8e8e8e; }
+  .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-top {
+    display: flex;
+    flex-flow: row nowrap;
+    align-content: center;
+    padding-top: 10px;
+    padding-left: 28px; }
+    .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-top span {
+      display: inline-block;
+      width: 620px; }
+      .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-top span u {
+        line-height: 40px;
+        padding-left: 10px;
+        text-decoration: none;
+        font-size: 14px;
+        color: #008582; }
+      .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-top span i {
+        padding-left: 10px;
+        line-height: 40px;
+        font-size: 14px;
+        font-style: normal;
+        color: #ced2ce; }
+  .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-content {
+    padding: 10px 0 10px 70px; }
+    .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-content p {
+      font-size: 12px;
+      line-height: 22px;
+      width: 550px; }
+    .ablum-details-comment-first .ablum-details-comment-others .ablum-details-comment-others-content a {
+      display: inline-block;
+      padding-top: 10px;
+      font-size: 12px;
+      color: #ea703a; }
 
 /*# sourceMappingURL=album.css.map */
