--- a/template/ablum_details.html
+++ b/template/ablum_details.html
@@ -143,16 +143,15 @@
         <div class="ablum-details-comment-content">
             <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示">
             </firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></firstcomment>
-            <div class="ablum-details-comment-content-more">
-                <span>点击加载更多</span>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示">
+            </firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示">
+            </firstcomment>
+            <firstcomment imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示">
+            </firstcomment>
+            <div class="ablum-details-comment-content-more" ng-click="loadMore()">
+                <span ng-if="loadingmore">点击加载更多</span>
+                <img ng-if="!loadingmore" src="img/loading.gif" alt="">
             </div>
         </div>
     </div>
