--- a/template/collection.html
+++ b/template/collection.html
@@ -65,7 +65,7 @@
                     <p class="condition-title fontB">所在地区：</p>
                     <ul class="condition-content">
                         <li ng-repeat="(key,value) in data.orgList">
-                            <span ng-click="getArea($event)" ng-bind="value.city.shortname" data-id="{{key}}"></span>
+                            <span ng-click="getArea($event)" ng-bind="value.cityName" data-id="{{key}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -75,7 +75,7 @@
                 <div class="condition-item" ng-if="isUnit">
                     <p class="condition-title fontB">收藏单位：</p>
                     <ul class="condition-content">
-                        <li ng-repeat="a in data.orgList[id].museums">
+                        <li ng-repeat="a in data.orgList[id].museum">
                             <span ng-click="getUnit($event)" ng-bind="a.name" data-id2="{{a.id}}"></span>
                         </li>
                     </ul>
@@ -171,7 +171,7 @@
                     <p class="condition-title fontB">所在地区：</p>
                     <ul class="condition-content">
                         <li ng-repeat="(key,value) in data.orgList">
-                            <span ng-click="getArea($event)" ng-bind="value.city.shortname" data-id="{{key}}"></span>
+                            <span ng-click="getArea($event)" ng-bind="value.cityName" data-id="{{key}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -181,7 +181,7 @@
                 <div class="condition-item" ng-if="isUnit">
                     <p class="condition-title fontB">收藏单位：</p>
                     <ul class="condition-content">
-                        <li ng-repeat="a in data.orgList[id].museums">
+                        <li ng-repeat="a in data.orgList[id].museum">
                             <span ng-click="getUnit($event)" ng-bind="a.name" data-id2="{{a.id}}"></span>
                         </li>
                     </ul>
